--- a/shark-bait/src/index.css
+++ b/shark-bait/src/index.css
@@ -1,3 +1,6 @@
+
+// ...existing code...
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,6 +28,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
