--- a/shark-bait/src/components/WorldWind.css
+++ b/shark-bait/src/components/WorldWind.css
@@ -17,7 +17,7 @@
   justify-content: center;
   min-width: 1000px;
   width: 100%;
-  padding: 6rem 4rem;
+  padding: 4rem 4rem 4rem 4rem;
   max-height: fit-container;
   position: relative;
   overflow-x: auto;
@@ -34,12 +34,18 @@
   color: var(--text-dark);
 }
 
-.globe-container {
+/* .globe-container {
   position: relative;
   width: 100%;
   height: 100%;
   background-color: #808080;
 }
+
+.globe-backdrop {
+  position: relative;
+  min-height: 100%;
+  background-color: #4a4a4a;
+} */
 
 .layer-panel h2 {
   margin: 0 0 20px 0;
@@ -60,7 +66,7 @@
   gap: 12px;
   cursor: pointer;
   font-size: 1.1em;
-  padding: 8px;
+  padding: 0.5rem 0.5rem 0.5rem 0;
   border-radius: 4px;
   transition: all 0.2s ease;
   color: var(--text-dark);
@@ -140,21 +146,44 @@
 }
 
 .layer-panel {
-  width: 20%;
-  min-width: 250px;
-  background: #1a1a1a; /* Dark background */
-  padding: 0.75rem 0.75rem 1rem 0.75rem;
+  min-width: fit-content;
+  padding: 0.75rem 1rem 1rem 1rem;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
   color: #ffffff; /* Light text for contrast */
-  padding-top: 1rem;
+  background: var(--card-bg);
+  border: 1px solid var(--card-border);
+  border-radius: 0.75rem 0 0 0.75rem;
 }
 
 .globe-container {
+  /* background-color: #4a4a4a; */
+  background: var(--card-bg);
+  border: 1px solid var(--card-border);
+  border-radius: 0 0.75rem 0.75rem 0;
+  width: 70%;
+}
+
+.globe-canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: black;
+  border-radius: 0 0.75rem 0.75rem 0;
+}
+
+/* .globe-container {
   flex: 1;
   position: relative;
   height: 100%;
-  background: #000; /* Dark background for the globe */
-}
+  background: #000; 
+} */
+/* 
+.globe-canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: black;
+} */
 
 .layer-panel h2 {
   margin: 0 0 20px 0;
