--- a/shark-bait/src/components/WorldWind.css
+++ b/shark-bait/src/components/WorldWind.css
@@ -274,6 +274,11 @@
   background: #0a1929; // linear-gradient(180deg, #0a1929 100%, #1a2c42 100%, #2d4a64 100%);
 }
 
-.sources-link {
-
+.worldwind {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  height: fit-content;
+  /* bottom: 0;
+  left: 0; */
 }
