--- a/shark-bait/src/components/WorldWind.css
+++ b/shark-bait/src/components/WorldWind.css
@@ -35,19 +35,6 @@
   color: var(--text-dark);
 }
 
-/* .globe-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #808080;
-}
-
-.globe-backdrop {
-  position: relative;
-  min-height: 100%;
-  background-color: #4a4a4a;
-} */
-
 .layer-panel h2 {
   margin: 0 0 20px 0;
   font-size: 1.2em;
@@ -173,20 +160,6 @@
   border-radius: 0 0.75rem 0.75rem 0;
 }
 
-/* .globe-container {
-  flex: 1;
-  position: relative;
-  height: 100%;
-  background: #000; 
-} */
-/* 
-.globe-canvas {
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-color: black;
-} */
-
 .layer-panel h2 {
   margin: 0 0 20px 0;
   font-size: 1.4em;
@@ -272,7 +245,7 @@
 }
 
 .dark-mode .data-layer-sources {
-  background: #0a1929; // linear-gradient(180deg, #0a1929 100%, #1a2c42 100%, #2d4a64 100%);
+  background: #0a1929;
 }
 
 .worldwind {
@@ -280,6 +253,4 @@
   top: 0.5rem;
   right: 0.5rem;
   height: fit-content;
-  /* bottom: 0;
-  left: 0; */
 }
